# whoop-copilot

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
docs/: index.html  privacy-policy.html
src/whoop_copilot/: analyzer.py  cli.py  config.py  copilot_money.py  oauth_whoop.py  whoop_api.py
